PCBC-401: embed PHP classes using pcs
Change-Id: I024053ca037963442c388292304c4b5f47d19471
Reviewed-on: http://review.couchbase.org/68395
Tested-by: buildbot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,19 @@
 *.lo
 *.o
+*.swp
 *~
 .deps
 .libs/
-package.xml
+/*.out
+/Debug/
+/config.nice.bat
+/configure.bat
+/configure.js
+/test.cache
 Makefile
-Makefile.*
+Makefile.fragments
+Makefile.global
+Makefile.objects
 acinclude.m4
 aclocal.m4
 autom4te.cache
@@ -20,19 +28,13 @@ config.sub
 configure
 configure.in
 couchbase.la
+docs/
+include/
 install-sh
 libtool
 ltmain.sh
 missing
 mkinstalldirs
-run-tests.php
 modules/
-include/
-docs/
-/Debug/
-/test.cache
-/config.nice.bat
-/configure.bat
-/configure.js
-/*.out
-*.swp
+package.xml
+run-tests.php
