PCBC-531: Field encryption
Change-Id: I02b406d35a8b6321726889e24515cc8cb1bc2068
Reviewed-on: http://review.couchbase.org/91343
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/package.xml
+++ b/package.xml
@@ -73,6 +73,7 @@
             <file role="src" name="php_couchbase.h" />
             <file role="src" name="src/couchbase/analytics_query.c" />
             <file role="src" name="src/couchbase/authenticator.c" />
+            <file role="src" name="src/couchbase/crypto.c" />
             <file role="src" name="src/couchbase/classic_authenticator.c" />
             <file role="src" name="src/couchbase/password_authenticator.c" />
             <file role="src" name="src/couchbase/base36.c" />
