--- a/package.xml
+++ b/package.xml
@@ -18,9 +18,9 @@
         <active>yes</active>
     </lead>
 
-    <date>2019-05-29</date>
+    <date>2019-05-30</date>
     <version>
-        <release>3.0.0alpha2</release>
+        <release>3.0.0alpha3</release>
         <api>3.0.0</api>
     </version>
     <stability>
@@ -30,7 +30,7 @@
     <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2
     </license>
     <notes>
-        * second alpha release
+        * third alpha release
     </notes>
     <contents>
         <dir name="/">
