Update meta for 3.0.0alpha4
Change-Id: Id37057fd75f5b2c98e1c6bc04a00c66bacbf0a7a
Reviewed-on: http://review.couchbase.org/112131
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/package.xml
+++ b/package.xml
@@ -18,9 +18,9 @@
         <active>yes</active>
     </lead>
 
-    <date>2019-05-30</date>
+    <date>2019-07-18</date>
     <version>
-        <release>3.0.0alpha3</release>
+        <release>3.0.0alpha4</release>
         <api>3.0.0</api>
     </version>
     <stability>
@@ -30,7 +30,7 @@
     <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2
     </license>
     <notes>
-        * third alpha release
+        * fourth alpha release
     </notes>
     <contents>
         <dir name="/">
