--- a/package.xml
+++ b/package.xml
@@ -18,19 +18,19 @@
         <active>yes</active>
     </lead>
 
-    <date>2019-07-18</date>
+    <date>2019-10-23</date>
     <version>
-        <release>3.0.0alpha4</release>
+        <release>3.0.0beta1</release>
         <api>3.0.0</api>
     </version>
     <stability>
-        <release>alpha</release>
-        <api>alpha</api>
+        <release>beta</release>
+        <api>beta</api>
     </stability>
     <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2
     </license>
     <notes>
-        * fourth alpha release
+        * First beta release
     </notes>
     <contents>
         <dir name="/">
