Update meta for 3.0.1
Change-Id: I01d7d1c9fdd6ea5c955a2342826acf68ed2db713
Reviewed-on: http://review.couchbase.org/121649
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/package.xml
+++ b/package.xml
@@ -18,19 +18,25 @@
         <active>yes</active>
     </lead>
 
-    <date>2020-01-21</date>
+    <date>2020-02-04</date>
     <version>
-        <release>3.0.0</release>
+        <release>3.0.1</release>
         <api>3.0.0</api>
     </version>
     <stability>
         <release>stable</release>
         <api>stable</api>
     </stability>
-    <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2
-    </license>
+    <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2</license>
     <notes>
-        * First GA release of SDK 3.0
+        * Exposed manager APIs on Cluster level:
+            - Cluster#queryIndexes() -> QueryIndexManager
+            - Cluster#searchIndexes() -> SearchIndexManager
+            - Cluster#users() -> UserManager
+            - Cluster#buckets() -> BucketManager
+        * Exposed manager APIs on Bucket level:
+            - Bucket#collections() -> CollectionManager
+            - Bucket#viewIndexes() -> ViewIndexManager
     </notes>
     <contents>
         <dir name="/">
@@ -150,6 +156,22 @@
     <providesextension>couchbase</providesextension>
     <extsrcrelease/>
     <changelog>
+        <release>
+        <date>2020-01-21</date>
+            <version>
+                <release>3.0.0</release>
+                <api>3.0.0</api>
+            </version>
+            <stability>
+                <release>stable</release>
+                <api>stable</api>
+            </stability>
+            <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2
+            </license>
+            <notes>
+                * First GA release of SDK 3.0
+            </notes>
+            </release>
         <release>
             <date>2019-10-23</date>
             <version>
