--- a/package.xml
+++ b/package.xml
@@ -18,9 +18,9 @@
         <active>yes</active>
     </lead>
 
-    <date>2020-02-04</date>
+    <date>2020-03-04</date>
     <version>
-        <release>3.0.1</release>
+        <release>3.0.2</release>
         <api>3.0.0</api>
     </version>
     <stability>
@@ -29,14 +29,10 @@
     </stability>
     <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2</license>
     <notes>
-        * Exposed manager APIs on Cluster level:
-            - Cluster#queryIndexes() -> QueryIndexManager
-            - Cluster#searchIndexes() -> SearchIndexManager
-            - Cluster#users() -> UserManager
-            - Cluster#buckets() -> BucketManager
-        * Exposed manager APIs on Bucket level:
-            - Bucket#collections() -> CollectionManager
-            - Bucket#viewIndexes() -> ViewIndexManager
+        * PCBC-660: Detect when to raise CasMismatchException
+        * PCBC-663: make sure search object will not be double-freed
+        * Fixed memory leaks.
+        * Fixed manifest issue leading to install failure.
     </notes>
     <contents>
         <dir name="/">
@@ -156,7 +152,29 @@
     <extsrcrelease/>
     <changelog>
         <release>
-        <date>2020-01-21</date>
+            <date>2020-02-04</date>
+            <version>
+                <release>3.0.1</release>
+                <api>3.0.0</api>
+            </version>
+            <stability>
+                <release>stable</release>
+                <api>stable</api>
+            </stability>
+            <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2</license>
+            <notes>
+                * Exposed manager APIs on Cluster level:
+                    - Cluster#queryIndexes() -> QueryIndexManager
+                    - Cluster#searchIndexes() -> SearchIndexManager
+                    - Cluster#users() -> UserManager
+                    - Cluster#buckets() -> BucketManager
+                * Exposed manager APIs on Bucket level:
+                    - Bucket#collections() -> CollectionManager
+                    - Bucket#viewIndexes() -> ViewIndexManager
+            </notes>
+        </release>
+        <release>
+            <date>2020-01-21</date>
             <version>
                 <release>3.0.0</release>
                 <api>3.0.0</api>
@@ -170,7 +188,7 @@
             <notes>
                 * First GA release of SDK 3.0
             </notes>
-            </release>
+        </release>
         <release>
             <date>2019-10-23</date>
             <version>
