--- a/package.xml
+++ b/package.xml
@@ -18,9 +18,9 @@
         <active>yes</active>
     </lead>
 
-    <date>2020-03-04</date>
+    <date>2020-06-17</date>
     <version>
-        <release>3.0.2</release>
+        <release>3.0.3</release>
         <api>3.0.0</api>
     </version>
     <stability>
@@ -29,10 +29,24 @@
     </stability>
     <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2</license>
     <notes>
-        * PCBC-660: Detect when to raise CasMismatchException
-        * PCBC-663: make sure search object will not be double-freed
-        * Fixed memory leaks.
-        * Fixed manifest issue leading to install failure.
+        * PCBC-696: Fix encoding issue in QueryString search query
+        * PCBC-667: Add maxExpiry for CollectionSpec of collection manager
+        * PCBC-690: Increase refcount of arg in ViewOptions::keys()
+        * PCBC-688: Ensure that temporary strings are copied in ViewOptions builder
+        * PCBC-666: Fix invalid memory access of Query result "meta"
+        * PCBC-665: Fix build issue on Debian
+        * Documentation improvements:
+            * PCBC-683: update documentation steps
+            * PCBC-675: Add API docs for exceptions
+            * Update API ref to add docs for results objects
+            * Update API reference for remaining undocument query API
+            - PCBC-672: Add API docs for KV functions
+            - PCBC-671: Add API reference docs for cluster/bucket etc...
+            - PCBC-694: Remove \ namespace prefix in return type and argument definitions
+            - PCBC-694: Allow null to be passed to nullable options
+            - PCBC-693: replace GetAllReplicaOptions with GetAllReplicasOptions
+            - PCBC-692: Use MutationResult instead of StoreResult
+            - PCBC-691: Use "|null" instead of "?" in phpdoc
     </notes>
     <contents>
         <dir name="/">
@@ -151,6 +165,24 @@
     <providesextension>couchbase</providesextension>
     <extsrcrelease/>
     <changelog>
+        <release>
+            <date>2020-03-04</date>
+            <version>
+                <release>3.0.2</release>
+                <api>3.0.0</api>
+            </version>
+            <stability>
+                <release>stable</release>
+                <api>stable</api>
+            </stability>
+            <license uri="http://www.apache.org/licenses/LICENSE-2.0">Apache V2</license>
+            <notes>
+                * PCBC-660: Detect when to raise CasMismatchException
+                * PCBC-663: make sure search object will not be double-freed
+                * Fixed memory leaks.
+                * Fixed manifest issue leading to install failure.
+            </notes>
+        </release>
         <release>
             <date>2020-02-04</date>
             <version>
