PCBC-702: implement geopolygon FTS query
Change-Id: I5cac0e1ddac1d9a1fd27212de878e476965a4e68
Reviewed-on: http://review.couchbase.org/c/php-couchbase/+/136274
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/package.xml
+++ b/package.xml
@@ -128,6 +128,7 @@
             <file role="src" name="src/couchbase/search/facet.c" />
             <file role="src" name="src/couchbase/search/geo_bounding_box_query.c" />
             <file role="src" name="src/couchbase/search/geo_distance_query.c" />
+            <file role="src" name="src/couchbase/search/geo_polygon_query.c" />
             <file role="src" name="src/couchbase/search/match_all_query.c" />
             <file role="src" name="src/couchbase/search/match_none_query.c" />
             <file role="src" name="src/couchbase/search/match_phrase_query.c" />
