--- a/package.xml
+++ b/package.xml
@@ -144,7 +144,8 @@
     <dependencies>
         <required>
             <php>
-                <min>7.1.0</min>
+                <min>7.2.0</min>
+                <max>7.4.99</max>
             </php>
             <pearinstaller>
                 <min>1.10.1</min>
