PCBC-718: deprecate expiry() on GetResult and LookupInResult
expiry() is deprecated in favour to expiryTime() which returns
DateTimeInterface

Change-Id: I367253d663d4164f8638924ed35339878f1e1532
Reviewed-on: http://review.couchbase.org/c/php-couchbase/+/140715
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/package.xml
+++ b/package.xml
@@ -85,6 +85,7 @@
             <file role="src" name="src/couchbase/bucket/remove.c" />
             <file role="src" name="src/couchbase/bucket/store.c" />
             <file role="src" name="src/couchbase/bucket/subdoc.c" />
+            <file role="src" name="src/couchbase/bucket/subdoc_cookie.h" />
             <file role="src" name="src/couchbase/bucket/touch.c" />
             <file role="src" name="src/couchbase/bucket/unlock.c" />
             <file role="src" name="src/couchbase/bucket/view.c" />
