PCBC-715: refactor document expiry duration
* allow to specify DateTimeInterface objects as expiry value in mutation
  options

* when expiration is set as long in seconds, treat the value as relative
  if it is less than 50 years in seconds. In this case take current time
  and add to the expiration value

Change-Id: Ib541cdc2d88eaf185d9ddc1788b3b3da99df00ea
Reviewed-on: http://review.couchbase.org/c/php-couchbase/+/140728
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/package.xml
+++ b/package.xml
@@ -77,6 +77,8 @@
             <file role="src" name="src/couchbase/bucket/cbft.c" />
             <file role="src" name="src/couchbase/bucket/counter.c" />
             <file role="src" name="src/couchbase/bucket/exists.c" />
+            <file role="src" name="src/couchbase/bucket/expiry_util.c" />
+            <file role="src" name="src/couchbase/bucket/expiry_util.h" />
             <file role="src" name="src/couchbase/bucket/get.c" />
             <file role="src" name="src/couchbase/bucket/get_replica.c" />
             <file role="src" name="src/couchbase/bucket/health.c" />
