update tests for phpunit 9
Change-Id: I468d95a1fb0762b1f5fff900c457b5a0819cfa2b
Reviewed-on: http://review.couchbase.org/c/php-couchbase/+/141437
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Sergey Avseyev <sergey.avseyev@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -6,41 +6,42 @@
 *~
 .deps
 .libs/
-/.idea/
-/cmake-build-debug/
 /*.out
+/.idea/
 /Debug/
+/Makefile
+/Makefile.fragments
+/Makefile.global
+/Makefile.objects
+/acinclude.m4
+/aclocal.m4
+/autom4te.cache
+/build/
+/cmake-build-debug/
+/config.guess
+/config.h
+/config.h.in
+/config.log
+/config.nice
 /config.nice.bat
+/config.status
+/config.sub
+/configure
+/configure.ac
 /configure.bat
+/configure.in
 /configure.js
+/couchbase.la
+/docs/
+/include/
+/install-sh
+/libtool
+/ltmain.sh
+/missing
+/mkinstalldirs
+/modules/
+/package.xml
+/run-tests.php
 /test.cache
-Makefile
-Makefile.fragments
-Makefile.global
-Makefile.objects
-acinclude.m4
-aclocal.m4
-autom4te.cache
-build/
-config.guess
-config.h
-config.h.in
-config.log
-config.nice
-config.status
-config.sub
-configure
-configure.in
-configure.ac
-couchbase.la
-docs/
-include/
-install-sh
-libtool
-ltmain.sh
-missing
-mkinstalldirs
-modules/
-package.xml
-run-tests.php
-tests/CouchbaseMock.jar
+/tests/CouchbaseMock.jar
+/phpunit.result.cache
